fix mobile horizontal overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7265,3 +7265,14 @@ p {
   left: 0%;
   }
 }
+
+/* Fix overflow issue */
+@media screen and (max-width: 667px) {
+  body {
+      overflow-x: hidden !important;
+  }
+  .container {
+      max-width: 100% !important;
+      overflow-x: hidden !important;
+  }
+}
